-Added Tests for BookingController.java and BookingService.java