@@ -1,22 +1,23 @@
 package com.wwi21sebgroup1.CinemaTicketReservationSystem.services;
 
+import com.wwi21sebgroup1.CinemaTicketReservationSystem.config.exceptions.InvalidRequestException;
 import com.wwi21sebgroup1.CinemaTicketReservationSystem.entities.*;
 import com.wwi21sebgroup1.CinemaTicketReservationSystem.repositories.*;
 import com.wwi21sebgroup1.CinemaTicketReservationSystem.requests.BookingRequest;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class BookingServiceTest {
@@ -25,35 +26,131 @@ public class BookingServiceTest {
     @Mock
     private SeatRepository seatRepository;
     @Mock
-    private ShowingRepository showingRepository;
+    private BookingRepository bookingRepository;
     @Mock
     private UserRepository userRepository;
     @InjectMocks
     private BookingService bookingService;
 
-    @Test
-    @DisplayName("BookingRequest to Booking: Transformation works as expected")
-    public void transformRequestToObject(){
-        Integer userId = 1;
-        User user = new User();
-        user.setId(userId);
-        Integer showingId = 1;
-        Showing showing = new Showing();
-        showing.setId(showingId);
-        SeatingPlan seatingPlan = new SeatingPlan();
-        seatingPlan.setId(1);
-        List<String> seatNumbersString = new ArrayList<>(Arrays.asList("A1", "A2", "A3"));
-        List<Seat> seats = new ArrayList<>(Arrays.asList(   new Seat(10,false, seatingPlan, new SeatNumber('A', (byte)1, null)),
-                                                            new Seat(10,false, seatingPlan, new SeatNumber('A', (byte)2, null)),
-                                                            new Seat(10,false, seatingPlan, new SeatNumber('A', (byte)3, null))));
-        BookingRequest bookingRequest = new BookingRequest(userId, showingId, seatNumbersString);
-        when(showingRepository.findById(showingId)).thenReturn(Optional.of(showing));
-        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-        when(seatRepository.findAllBySeatingPlanId(1)).thenReturn(seats);
-        when(seatingPlanRepository.findByShowingId(showingId)).thenReturn(seatingPlan);
-        Booking actualBooking = bookingService.processRequest(bookingRequest);
-        Booking expectedBooking = new Booking(user, showing, seats, 30);
+    int userId = 1;
+    int showingId = 2;
+    List<String> seatNumbers = List.of("A1", "A2");
+    BookingRequest validRequest = new BookingRequest(userId, showingId, seatNumbers);
+    BookingRequest invalidRequest = new BookingRequest();
 
-        assertEquals(actualBooking, expectedBooking);
+    User user = new User();
+    Showing showing = new Showing();
+    SeatingPlan seatingPlan = new SeatingPlan();
+    List<Seat> seats = List.of(new Seat(6, false, seatingPlan, new SeatNumber()),
+            new Seat(6, false, seatingPlan, new SeatNumber()));
+    Booking booking = new Booking(user, showing, seats, 12);
+    
+    @Nested
+    class AddBooking{
+        Booking expected;
+        Booking actual;
+        @Test
+        public void t01ValidRequest() throws InvalidRequestException {
+            expected = booking;
+            BookingService bookingServiceSpy = spy(bookingService);
+            doReturn(booking).when(bookingServiceSpy).processRequest(validRequest);
+            actual = bookingServiceSpy.addBooking(validRequest);
+            assertEquals(expected, actual);
+        }
+
+        @Test
+        public void t02InvalidRequest(){
+            assertThrows(InvalidRequestException.class, () -> {
+                BookingService bookingServiceSpy = spy(bookingService);
+                doThrow(new InvalidRequestException("BookingRequest")).when(bookingServiceSpy).processRequest(invalidRequest);
+                bookingServiceSpy.addBooking(invalidRequest);
+            });
+        }
+    }
+
+    @Nested
+    class GetAllBookings{
+        Iterable<Booking> expected;
+        Iterable<Booking> actual;
+        @Test
+        public void t01NoBookingsFound(){
+            expected = List.of();
+            when(bookingRepository.findAll()).thenReturn(List.of());
+            actual = bookingService.getAllBookings();
+            assertEquals(expected, actual);
+        }
+        @Test
+        public void t02BookingFound(){
+            expected = List.of(booking);
+            when(bookingRepository.findAll()).thenReturn(List.of(booking));
+            actual = bookingService.getAllBookings();
+            assertEquals(expected, actual);
+        }
+    }
+
+    @Nested
+    class GetBookingsByUserId{
+        Iterable<Booking> expected;
+        Iterable<Booking> actual;
+        @Test
+        public void t01NoSuchUser(){
+            when(bookingRepository.findByUserId(userId)).thenThrow(new NoSuchElementException());
+            assertThrows(NoSuchElementException.class, () -> bookingService.getBookingsByUserId(userId));
+        }
+        @Test
+        public void t02NoBookingsFound(){
+            expected = List.of();
+            when(bookingRepository.findByUserId(userId)).thenReturn(List.of());
+            actual = bookingService.getBookingsByUserId(userId);
+            assertEquals(expected, actual);
+        }
+        @Test
+        public void t03BookingFound(){
+            expected = List.of(booking);
+            when(bookingRepository.findByUserId(userId)).thenReturn(List.of(booking));
+            actual = bookingService.getBookingsByUserId(userId);
+            assertEquals(expected, actual);
+        }
+    }
+
+    @Nested
+    class UpdateBooking{
+        Booking expected;
+        Booking actual;
+        @Test
+        public void t01BookingFound() throws InvalidRequestException {
+            expected = booking;
+            when(bookingRepository.findById(123)).thenReturn(Optional.of(booking));
+            BookingService bookingServiceSpy = spy(bookingService);
+            doReturn(booking).when(bookingServiceSpy).processRequest(validRequest);
+            actual = bookingServiceSpy.updateBooking(123, validRequest);
+            assertEquals(expected, actual);
+        }
+        @Test
+        public void t02BookingNotFound(){
+            assertThrows(NoSuchElementException.class, () -> {
+                when(bookingRepository.findById(3)).thenThrow(new NoSuchElementException());
+                bookingService.updateBooking(3, validRequest);
+            });
+        }
+        @Test
+        public void t03InvalidRequest() throws InvalidRequestException {
+            BookingService bookingServiceSpy = spy(bookingService);
+            doThrow(new InvalidRequestException("BookingRequest")).when(bookingServiceSpy).processRequest(invalidRequest);
+            assertThrows(InvalidRequestException.class, () -> bookingServiceSpy.updateBooking(1, invalidRequest));
+        }
+    }
+
+    @Nested
+    class DeleteBooking{
+        @Test
+        public void t01BookingFound(){
+            bookingService.deleteBooking(1);
+        }
+        @Test
+        public void t02BookingNotFound(){
+            doThrow(new NoSuchElementException()).when(bookingRepository).deleteById(1);
+            assertThrows(NoSuchElementException.class, () -> bookingService.deleteBooking(1));
+        }
     }
 }
